fixed left nav/links hiding icons on small screens

--- a/styles/components/NavLeft/NavLeft.module.scss
+++ b/styles/components/NavLeft/NavLeft.module.scss
@@ -52,15 +52,14 @@
       display: none;
     }
 
-    svg {
+    img {
         display: block !important;
     }
   }
-
-  svg {
-    fill: white;
-    width: 1.4rem;
-    height: 1.4rem;
+  
+  img {
     display: none;
+
   }
+
 }
