--- a/styles/components/NavLeft/NavLink.module.scss
+++ b/styles/components/NavLeft/NavLink.module.scss
@@ -37,7 +37,7 @@
 
   }
 
-  > *:not(svg){
+  > *:not(img){
     margin: 0.8rem 0;
 
     @media (max-width: 1021px) {
